# WorkforceRuntime

./: .dockerignore  .gitignore  AGENTS.md  DESIGN.md  DESIGN_V2.md  Dockerfile  EXAMPLES.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V2.md  MCP_TOOLS.md  PRODUCT.md  QUICKSTART.md  README.md  ROADMAP.md  WORKER_ADAPTERS.md  docker-compose.yml  pyproject.toml  workforce_runtime_config.json
.codex/: config.toml
docker/: entrypoint.sh  workforce_runtime_config.docker.json
docs/: CODEX_AGENT_INTEGRATION.md  Favicon Preview.html  STORAGE_BACKENDS.md  WORKFORCE_RUNTIME_GUIDE.md  Workforce Runtime Animation (standalone).html  export-workforce-animation.cjs  export-workforce-runtime-animation.cjs  runtime_dependencies.md  v2_benchmark_case_1.md  workforce-anim.jsx
examples/: Large_Task_100_v0.md  dashboard_config.json  openrouter_models.json  sandbox_runtime_settings.json  workforce_runtime_config.json
scripts/: install_workforce_runtime.sh
tests/: test_agent_inbox.py  test_benchmark.py  test_budget_enforcement.py  test_clarification.py  test_claude_code_interactive_worker.py  test_claude_code_worker.py  test_codex_worker.py  test_core_contracts.py  test_dashboard.py  test_demo.py  test_external_mcp.py  test_generic_cli_worker.py  test_long_rfc_demo.py  test_manager_review.py  test_mcp_server.py  test_model_registry.py  test_openrouter_client.py  test_org_designer.py  test_org_loader.py  test_org_mcp_tools.py  test_permissions.py  test_phase0_smoke.py  test_process_runner.py  test_public_alpha_docs.py  test_runtime.py  test_skill_registry.py  test_storage.py  test_swe_bench_adapter.py  test_task_dossier_tools.py  test_v2_control_plane.py  test_v2_end_to_end.py  test_v2_organization.py  (+4 more)
(+194 files in other folders)
