[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workforce-runtime"
version = "0.1.0"
description = "Organization runtime for coordinating third-party AI worker agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cerebras-cloud-sdk>=1.67",
  "groq>=1.5",
  "pika>=1.3",
  "pexpect>=4.9",
  "pymysql>=1.1",
  "pydantic>=2.7",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
workforce-runtime = "workforce_runtime.__main__:main"

[tool.setuptools.packages.find]
include = ["workforce_runtime*"]

[tool.setuptools.package-data]
workforce_runtime = [
  "dashboard/assets/*.js",
  "dashboard/static/*.html",
  "dashboard/static/assets/*",
  "dashboard/frontend/*.html",
  "dashboard/frontend/*.js",
  "dashboard/frontend/*.json",
  "dashboard/frontend/src/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
